--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,10 +1,8 @@
 <% provide(:title, 'Contact') %>
 <h1>Contact</h1>
 <p>
-  Contact Ruby on Rails Tutorial about the sample app at the
-  <a href="http://railstutorial.org/contact">Contact page</a>
-  <br />
-  <a href="https://twitter.com/intent/tweet?button_hashtag=CarmenGallery" class="twitter-hashtag-button" data-size="large">Tweet #CarmenGallery</a>
+  Para Informacion adicional, ponte en contacto con Gerardo Chavez
+  <a href="https://www.facebook.com/pages/Mejorandotusalud/542349175786786">Contact page</a>
 </p>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];
 	if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";
