--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,8 +1,6 @@
 <% provide(:title, 'Help') %>
 <h1>Help</h1>
 <p>
-  Get help on the Ruby on Rails Tutorial at the
-  <a href="http://railstutorial.org/help">Rails Tutorial help page</a>.
-  To get help on this sample app, see the
-  <a href="http://railstutorial.org/book">Rails Tutorial book</a>.
+  Para obtener ayuda y mas informaciòn contacta a Gerardo Chavez
+  <a href="https://www.facebook.com/pages/Mejorandotusalud/542349175786786">Mejorando tu salud</a>.
 </p>
