--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,12 +1,12 @@
 <% provide(:title, 'All users') %>
 <h1>All users</h1>
 
-<%= form_tag users_path, :method => :get do %>
+<!--<%= form_tag users_path, :method => :get do %>
   <p style="width: 300px;">
     <%= text_field_tag :search, params[:search] %> 
     <%= submit_tag "Search", :name => nil %>
   </p>
-<% end %>
+<% end %>-->
 
 <%= will_paginate %>
 
