--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -35,6 +35,7 @@
   <br />
   <video controls with="380" height="260">
   	<source src="BELAGE.mp4" />
+  	<source src="BELAGE.ogv" />
   	<source src="BELAGE.webm" />
   </video>
   <br />
