--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -33,10 +33,10 @@
 <div class="center hero-unit">
   <h1>Mejorando tu salud</h1>
   <br />
-  <video controls with="380" height="260">
-  	<source src="BELAGE.mp4" />
-  	<source src="BELAGE.ogv" />
-  	<source src="BELAGE.webm" />
+  <video class="video-js vjs-default-skin" controls preload="auto" width="640" height="290" >
+	<source src="BELAGE.mp4" type='video/mp4'/>
+	<source src="BELAGE.webm" type='video/webm' />
+	<source src="BELAGE.ogv" type='video/ogg' />
   </video>
   <br />
   <h2>
