--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -241,6 +241,7 @@ input, textarea, select, .uneditable-input {
 aside {
   textarea {
     height: 100px;
+    width: 250px;
     margin-bottom: 5px;
   }
 } 
